--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon_HEo.ico" />
+    <link rel="icon" type="image/x-icon" href="/Heo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Heo Jin Blog</title>
   </head>
